<resources>
    <string name="app_name">DigiShoes</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="latest">Latest</string>
    <string name="viewAll">View All</string>
    <string name="viewAllComments">View All Comments</string>
    <string name="comments">Comments</string>
    <string name="insertComments">Add Comment</string>
    <string name="popular">Popular</string>
    <string name="toman">Toman</string>
    <string name="productList">Product List</string>
    <string name="sort">Sort</string>
    <string name="sortLatestProduct">Latest</string>
    <string name="sortPriceHighToLow">Price: High to Low</string>
    <string name="sortPriceLowToHigh">Price: Low to High</string>
    <string name="sortPopular">Popular</string>
    <string name="addToCart">Add To Cart</string>
    <string name="unknown_error">Unknown Error</string>
    <string-array name="sortArray">
        <item>@string/sortLatestProduct</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>
    <string name="signupScreenTitle">Create Your Account</string>
    <string name="loginScreenHint">Enter Your Email And Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signupHint">You do not have an account?</string>
    <string name="loginHint">Do you have an account?</string>
    <string name="signup">SignUp</string>
    <string name="loginScreenTitle">Login into your account</string>
    <string name="count">Count</string>
    <string name="removeFromCart">Remove From Cart</string>
    <string name="purchaseDetails">purchaseDetails</string>
    <string name="totalAmount">Total Amount</string>
    <string name="shippingCost">shipping cost</string>
    <string name="theAmountPayable">The amount payable</string>

    <string name="emptyStateLoginMessage">Please Login Your Account </string>
    <string name="emptyState">Make your first purchase!</string>
    <string name="emptyStateCbn">Login Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">last Name</string>
    <string name="postalCode">Postal Code</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="onlinePayment">Online Payment</string>

    <string name="shippingTitlePage">Enter information</string>

    <string name="checkoutToolbarTitle">Order Status</string>
    <string name="returnToHome">Return To Home</string>
    <string name="orderHistory">Order History</string>
    <string name="price">Price</string>
    <string name="orderStatus">Order Status</string>

    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="favorite">Favorite</string>

    <string name="signOut">SignOut</string>
    <string name="guestUser">Guest User</string>

    <string name="favoriteMessage">Nothing here</string>
    <string name="deleteFavorite">Item Remove of Favorite</string>
    <string name="helpMessageFavoritePage">You can hold item for delete from list</string>

    <string name="OrderId">Order Id</string>
</resources>